// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correct multiple ExpensesSummary 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totaling 
    $23,432,543,435.45
    .
  </h1>
</div>
`;

exports[`should render correct singular ExpensesSummary 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expenses
     totaling 
    $2.35
    .
  </h1>
</div>
`;
